--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   nodered:
-    image: chadrogers00/node-red
+    image: nodered/node-red
     container_name: iab330nodered
     hostname: iab330nodered
     ports: 
